// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`info command basic info test case 1`] = `
[
  {
    "cwd": "/some/path/to/undefined",
    "target": {
      "cache": true,
      "cwd": "C:\\Users\\Ken\\AppData\\Local\\Temp\\lage-monorepo-basics-info-S1YYWj\\packages\\a",
      "depSpecs": [
        "build",
      ],
      "dependencies": [
        "a#build",
      ],
      "dependents": [],
      "id": "a#test",
      "label": "a - test",
      "options": {},
      "packageName": "a",
      "priority": 0,
      "task": "test",
      "type": "npmScript",
      "weight": 1,
    },
  },
  {
    "cwd": "/some/path/to/undefined",
    "target": {
      "cache": true,
      "cwd": "C:\\Users\\Ken\\AppData\\Local\\Temp\\lage-monorepo-basics-info-S1YYWj\\packages\\b",
      "depSpecs": [
        "build",
      ],
      "dependencies": [
        "b#build",
      ],
      "dependents": [],
      "id": "b#test",
      "label": "b - test",
      "options": {},
      "packageName": "b",
      "priority": 0,
      "task": "test",
      "type": "npmScript",
      "weight": 1,
    },
  },
  {
    "cwd": "/some/path/to/undefined",
    "target": {
      "cache": true,
      "cwd": "C:\\Users\\Ken\\AppData\\Local\\Temp\\lage-monorepo-basics-info-S1YYWj\\packages\\a",
      "depSpecs": [
        "^build",
      ],
      "dependencies": [
        "b#build",
      ],
      "dependents": [
        "a#test",
      ],
      "id": "a#build",
      "label": "a - build",
      "options": {},
      "packageName": "a",
      "priority": 0,
      "task": "build",
      "type": "npmScript",
      "weight": 1,
    },
  },
  {
    "cwd": "/some/path/to/undefined",
    "target": {
      "cache": true,
      "cwd": "C:\\Users\\Ken\\AppData\\Local\\Temp\\lage-monorepo-basics-info-S1YYWj\\packages\\b",
      "depSpecs": [
        "^build",
      ],
      "dependencies": [],
      "dependents": [
        "b#test",
        "a#build",
      ],
      "id": "b#build",
      "label": "b - build",
      "options": {},
      "packageName": "b",
      "priority": 0,
      "task": "build",
      "type": "npmScript",
      "weight": 1,
    },
  },
]
`;

exports[`info command scoped info test case 1`] = `
[
  {
    "cwd": "/some/path/to/undefined",
    "target": {
      "cache": true,
      "cwd": "C:\\Users\\Ken\\AppData\\Local\\Temp\\lage-monorepo-scoped-info-SS4lO7\\packages\\b",
      "depSpecs": [
        "build",
      ],
      "dependencies": [
        "b#build",
      ],
      "dependents": [],
      "id": "b#test",
      "label": "b - test",
      "options": {},
      "packageName": "b",
      "priority": 0,
      "task": "test",
      "type": "npmScript",
      "weight": 1,
    },
  },
  {
    "cwd": "/some/path/to/undefined",
    "target": {
      "cache": true,
      "cwd": "C:\\Users\\Ken\\AppData\\Local\\Temp\\lage-monorepo-scoped-info-SS4lO7\\packages\\b",
      "depSpecs": [
        "^build",
      ],
      "dependencies": [],
      "dependents": [
        "b#test",
      ],
      "id": "b#build",
      "label": "b - build",
      "options": {},
      "packageName": "b",
      "priority": 0,
      "task": "build",
      "type": "npmScript",
      "weight": 1,
    },
  },
]
`;
